crates/aranya-policy-lang/tests/data/invalid_text/hex_escaped_quote.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Invalid string
  |
1 | let x = "a\x0\""
  |         ^^^^^^^^ invalid character in hex character escape
